<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAS"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:background="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/actionbar_light">

            <LinearLayout
                android:id="@+id/linearLayoutAS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etSearchContentAS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1" />

                <ImageButton
                    android:id="@+id/ibClearText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_close"
                    android:visibility="invisible" />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewAS"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tvNoSearchResultFS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_search_result"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/tvServerErrorAS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/server_error"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvNetworkErrorAS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/network_connecting_error"
            android:visibility="invisible" />

        <include layout="@layout/movie_flag" />
    </FrameLayout>

</LinearLayout>